// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`CLI Output Formatting > displays most violated rules with multiple violations 1`] = `
"test/fixtures/multiple-rule-violations.html.erb:
  3:8 ✗ Attribute value should be quoted: \`id="value"\`. Always wrap attribute values in quotes. (html-attribute-values-require-quotes)
  3:34 ✗ Attribute value should be quoted: \`data-value="value"\`. Always wrap attribute values in quotes. (html-attribute-values-require-quotes)
  3:20 ✗ Attribute \`class\` uses single quotes. Prefer double quotes for HTML attribute values: \`class="value"\`. (html-attribute-double-quotes)
  4:3 ✗ Missing required \`alt\` attribute on \`<img>\` tag. Add \`alt=""\` for decorative images or \`alt="description"\` for informative images. (html-img-require-alt)
  5:14 ✗ Duplicate attribute \`class\` found on tag. Remove the duplicate occurrence. (html-no-duplicate-attributes)
  10:4 ✗ Nested <a> elements are not allowed. Links cannot contain other links. (html-no-nested-links)

Checked 1 file(s)
6 error(s), 0 warning(s) across 1 file(s)"
`;

exports[`CLI Output Formatting > displays rule violations when showing all rules 1`] = `
"test/fixtures/few-rule-violations.html.erb:
  2:8 ✗ Attribute value should be quoted: \`id="value"\`. Always wrap attribute values in quotes. (html-attribute-values-require-quotes)
  2:19 ✗ Attribute value should be quoted: \`class="value"\`. Always wrap attribute values in quotes. (html-attribute-values-require-quotes)
  3:3 ✗ Missing required \`alt\` attribute on \`<img>\` tag. Add \`alt=""\` for decorative images or \`alt="description"\` for informative images. (html-img-require-alt)
  3:11 ✗ Attribute value should be quoted: \`src="value"\`. Always wrap attribute values in quotes. (html-attribute-values-require-quotes)

Checked 1 file(s)
4 error(s), 0 warning(s) across 1 file(s)"
`;

exports[`CLI Output Formatting > formats detailed error output correctly 1`] = `
"test/fixtures/test-file-with-errors.html.erb:
  2:3 ✗ Tag name \`SPAN\` should be lowercase. Use \`span\` instead. (html-tag-name-lowercase)
  2:22 ✗ Tag name \`SPAN\` should be lowercase. Use \`span\` instead. (html-tag-name-lowercase)
  3:3 ✗ Missing required \`alt\` attribute on \`<img>\` tag. Add \`alt=""\` for decorative images or \`alt="description"\` for informative images. (html-img-require-alt)

Checked 1 file(s)
3 error(s), 0 warning(s) across 1 file(s)"
`;

exports[`CLI Output Formatting > formats simple output correctly 1`] = `
"test/fixtures/test-file-simple.html.erb:
  2:3 ✗ Tag name \`SPAN\` should be lowercase. Use \`span\` instead. (html-tag-name-lowercase)
  2:22 ✗ Tag name \`SPAN\` should be lowercase. Use \`span\` instead. (html-tag-name-lowercase)

Checked 1 file(s)
2 error(s), 0 warning(s) across 1 file(s)"
`;

exports[`CLI Output Formatting > formats success output correctly 1`] = `
"✓ test/fixtures/clean-file.html.erb - No issues found

Checked 1 file(s)
0 error(s), 0 warning(s) across 0 file(s)"
`;

exports[`CLI Output Formatting > handles multiple errors correctly 1`] = `
"test/fixtures/bad-file.html.erb:
  1:1 ✗ Tag name \`SPAN\` should be lowercase. Use \`span\` instead. (html-tag-name-lowercase)
  1:16 ✗ Tag name \`SPAN\` should be lowercase. Use \`span\` instead. (html-tag-name-lowercase)

Checked 1 file(s)
2 error(s), 0 warning(s) across 1 file(s)"
`;
